--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
-.App {
-  text-align: center;
-}
+/* .app {
+  padding: 20px;
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.left {
+  width: 350px;
+} */
+
+#components-layout-demo-side .logo {
+  height: 32px;
+  margin: 16px;
+  background: rgba(255, 255, 255, 0.3);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.site-layout .site-layout-background {
+  background: #fff;
+}
+
+
+/* .main {
+  flex: 1;
+  display: flex;
+} */
+
+.bookItem {
+  /* width: 15%; */
+  margin-bottom: 20px;
+  
+}
+
+.bookItem img {
+  max-width: 100%;
+}
+
+
+.bookPage {
+  display: flex;
+}
+.bookInfo {
+  margin-left: 20px;
 }
